--- a/specs/servlet/src/java/javax/servlet/http/LocalStrings_es.properties
+++ b/specs/servlet/src/java/javax/servlet/http/LocalStrings_es.properties
@@ -15,7 +15,7 @@
 ##   limitations under the License.
 ##
 
-# $Id$
+# $Rev$ $Date$
 #
 # Default localized string information
 # Localized para Locale es_ES
