GERONIMO-885 : applied #2 (18/Aug/05)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@239958 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/eclipse-plugin/org.apache.geronimo.ui/src/org/apache/geronimo/ui/internal/Messages.properties
+++ b/sandbox/eclipse-plugin/org.apache.geronimo.ui/src/org/apache/geronimo/ui/internal/Messages.properties
@@ -58,7 +58,15 @@ wizardEditTitle_EjbLocalRef=Edit EJB Local Reference
 wizardPageTitle_EjbLocalRef=EJB Reference Local Details
 wizardPageDescription_EjbLocalRef=Provide details for this ejb local reference.
 
+wizardNewTitle_SecurityRole=New Security Role
+wizardEditTitle_SecurityRole=Edit Security Role
+wizardPageTitle_SecurityRole=Security Rolel Details
+wizardPageDescription_SecurityRole=Provide details for this security role.
+
 editorTabGeneral=General
 editorTabNaming=Naming
 editorTabSecurity=Security
 editorTabDependencies=Dependencies
+
+name=Name
+description=Description
