GERONIMO-913 : partial patch - failures recorded in JIRA entry
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@240073 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/eclipse-plugin/org.apache.geronimo.ui/src/org/apache/geronimo/ui/internal/Messages.properties
+++ b/sandbox/eclipse-plugin/org.apache.geronimo.ui/src/org/apache/geronimo/ui/internal/Messages.properties
@@ -7,6 +7,11 @@ editorSectionGeneralDescription=Edit the common deployment settings.
 editorSectionSecurityRolesTitle=Security Roles
 editorSectionSecurityRolesDescription=The following security roles are defined:
 
+editorSectionSecurityTitle=Security
+editorSectionSecurityDescription=Specify the security settings.
+username=User ID:
+password=Password:
+
 editorConfigId=Config Id:
 editorParentId=Parent Id:
 editorContextRoot=Context Root:
